apps/zitadel/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel
  namespace: zitadel
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "zitadel.dataverket.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui/v2/login
      backendRefs:
        - name: zitadel-login
          port: 3000
    - backendRefs:
        - name: zitadel
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-redirect
  namespace: zitadel
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-system
      sectionName: http
  hostnames:
    - "zitadel.dataverket.org"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
